--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "My Earth App",
   "short_name": "My Earth",
   "description": "Explore the wonders of your planet",
-  "start_url": "/",
+  "start_url": "./",
   "display": "standalone",
   "display_override": ["standalone"],
   "background_color": "#ffffff",
